fix navbar scroll overlap

--- a/frontend/src/components/ListingShow/ListingShow.css
+++ b/frontend/src/components/ListingShow/ListingShow.css
@@ -1,10 +1,13 @@
 .listing-template {
-    margin-top: 70px;
+    top: 70px;
+    position: fixed;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: 99%;
+    bottom: 0;
+    overflow: auto;
 }
 
 .title-container{
@@ -63,6 +66,12 @@
 .photo-container3 img {
     width: 50%;
     margin-left: 8px;
+}
+
+.listing-divider {
+    width: 100%;
+    margin-bottom: 20px;
+    border-bottom: solid 1px #c8c8c8;
 }
 
 .location-container{
