--- a/frontend/src/components/Listings/listing.css
+++ b/frontend/src/components/Listings/listing.css
@@ -1,14 +1,16 @@
 .listing-container {
-   margin-top: 70px;
+    top: 70px;
     display: flex;
-    margin-left: -20px;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    overflow-y: hidden;
-    overflow-x: hidden;
+    overflow: auto;
+    position: fixed;
     width: 100%;
     height: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
 }
 
